Ajuste del servicio de generacion aleatoria de productos